# axum-auth-demo

./: Cargo.toml  README.md  app.http  config.docker.toml  dev-db.docker.toml  docker-compose.yaml  justfile
.cargo/: config.toml
examples/: sqlx-demo.rs
sql/dev/: 01-create-schema.sql  02-seed.sql
src/: dev_db.rs  lib.rs  main.rs
src/domain/: error.rs  errors.rs  mod.rs  model.rs
src/domain/auth/: service.rs
src/domain/ticket/: ticket.rs
src/domain/user/: entity.rs  error.rs  repository.rs  service.rs
src/infrastructure/: app.rs  app_router.rs  middleware.rs  mod.rs  state.rs  static_router.rs
src/infrastructure/auth/: dto.rs  jwt.rs  middleware.rs  mod.rs  router.rs  service.rs
src/infrastructure/auth/context/: ctx.rs  extractor.rs  mod.rs
src/infrastructure/config/: db.rs  mod.rs  util.rs
src/infrastructure/context/: ctx.rs  extractor.rs
src/infrastructure/crypt/: error.rs
src/infrastructure/login/: dto.rs  mod.rs  router.rs
src/infrastructure/middleware/: _auth.rs  error.rs  mod.rs  request_id.rs  user.rs
src/infrastructure/rest/: mod.rs  static_router.rs
src/infrastructure/rest/hello/: mod.rs
src/infrastructure/store/: mod.rs
src/infrastructure/ticket/: dto.rs  handlers.rs  mod.rs  router.rs  service.rs
src/utils/: mod.rs
tests/: auth.rs  experiment.rs  hello.rs  tickets.rs
