[package]
name = "axum-full-course"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"

tokio = { version = "1.32.0", features = ["full"] }

serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"

axum = { version = "0.6.20", features = ["macros"] }
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
tower-cookies = "0.9.0"
lazy-regex = "3.0.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
async-trait = "0.1.73"


[dev-dependencies]
reqwest = { version = "0.11.20", features = ["json", "cookies"] }
