[package]
name = "axum-full-course"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "dev_db"
path = "src/dev_db.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }

serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"

axum = { version = "0.6.20", features = ["macros"] }
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
tower-cookies = "0.9.0"
lazy-regex = "3.0.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
strum_macros = "0.25.2"
uuid = { version = "1.4.1", features = ["v4"] }
sqlx = { version = "0.7.1", features = [
  "postgres",
  "uuid",
  "time",
  "runtime-tokio-rustls",
] }
tokio-stream = "0.1.14"
futures = "0.3.28"
password-auth = { version = "1.0.0", features = ["pbkdf2"] }

[dev-dependencies]
anyhow = "1.0.75"
reqwest = { version = "0.11.20", features = ["json", "cookies"] }
