[package]
name = "axum-full-course"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "dev_db"
path = "src/dev_db.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }

indexmap = { version = "2.0.2", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.105", features = ["preserve_order"] }

axum = { version = "0.6.20", features = ["macros"] }
tower-http = { version = "0.4.4", features = [
  "fs",
  "trace",
  "request-id",
  "util",
] }
tower-cookies = "0.9.0"
lazy-regex = "3.0.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
strum_macros = "0.25.2"
uuid = { version = "1.4.1", features = ["v4"] }
sqlx = { version = "0.7.1", features = [
  "postgres",
  "uuid",
  "time",
  "runtime-tokio-rustls",
] }
tokio-stream = "0.1.14"
futures = "0.3.28"
scrypt = "0.11.0"
hmac = "0.12.1"
sha2 = "0.10.8"

# Only for educational purpose. Switch to original crate
base64 = { version = "0.1.2", git = "https://github.com/zveroboy/base64-rs" }
# base64 = "0.21.4"
subtle = "2.5"
tower = "0.4.13"

[dev-dependencies]
anyhow = "1.0.75"
reqwest = { version = "0.11.20", features = ["json", "cookies"] }

# https://github.com/RustCrypto/password-hashes/issues/467#issuecomment-1758520513
# [profile.dev]
# opt-level = 2
